# przypadek_public

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/chat/: admin.py  models.py  services.py  tests.py  urls.py
core/chat/migrations/: 0001_initial.py  0002_case_prelim_dx_raw.py  0003_casehistory.py
core/chat/views/: __init__.py  auth_views.py  chat_views.py  history_views.py  home_views.py  utils.py
core/core/: settings.py  urls.py
core/templates/chat/: completed_case.html  completed_detail.html  completed_grouped.html  history_list.html  home.html  login.html  register.html  stage.html  summary.html
